# uv-sample-editable-app1

./: README.md  ci_build.sh  pyproject.toml
src/uv_sample_editable_app1/: __init__.py
